--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,8 @@
     </style>
 
 </head>
-<body class="vh-100 d-flex flex-column justify-content-between">
-    <nav class="px-4 py-2 text-uppercase bg-light d-flex justify-content-between align-items-center">
+<body class="vh-100 d-flex flex-column justify-content-between bg-light">
+    <nav class="px-4 py-2 text-uppercase bg-white d-flex justify-content-between align-items-center">
         <h4 class="d-flex align-items-center"><i class="fa fa-code text-success mr-2 fa-2x"></i> Node Billing</h4>
         <div>
             <a href="/login" class="btn btn-success btn-sm text-lowercase">Login</a>
